# circlink

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  LICENSE  Makefile  README.md  README.rst  README.rst.license  VERSION  VERSION.license  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  release.yml
circbridge/: __main__.py  bridge.py  circbridge.py
circlink/: __init__.py  __main__.py  backend.py  circlink.py  cli.py  ledger.py  link.py
circlink/cli/: __init__.py  config.py  workspace.py
circlink/templates/: settings.yaml
docs/: basic.rst  conf.py  config.rst  configlist.csv  index.rst  requirements.txt  workspace.rst
